@@ -86,6 +86,7 @@
    UNSPEC_TLSTPRELLO
    UNSPEC_TLSGOTTPREL
    UNSPEC_TLSTLS
+   UNSPEC_TLSTLS_PCREL
    UNSPEC_FIX_TRUNC_TF		; fadd, rounding towards zero
    UNSPEC_STFIWX
    UNSPEC_POPCNTB
@@ -9495,6 +9496,15 @@
 
 ;; TLS support.
 
+(define_insn "*tls_gd_pcrel<bits>"
+  [(set (match_operand:P 0 "gpc_reg_operand" "=b")
+	(unspec:P [(match_operand:P 1 "rs6000_tls_symbol_ref" "")
+		   (const_int 0)]
+		  UNSPEC_TLSGD))]
+  "HAVE_AS_TLS && TARGET_ELF"
+  "la %0,%1@got@tlsgd@pcrel"
+  [(set_attr "prefixed" "yes")])
+
 (define_insn_and_split "*tls_gd<bits>"
   [(set (match_operand:P 0 "gpc_reg_operand" "=b")
 	(unspec:P [(match_operand:P 1 "rs6000_tls_symbol_ref" "")
@@ -9534,6 +9544,14 @@
 		 UNSPEC_TLSGD)))]
   "HAVE_AS_TLS && TARGET_ELF && TARGET_CMODEL != CMODEL_SMALL"
   "addi %0,%1,%2@got@tlsgd@l")
+
+(define_insn "*tls_ld_pcrel<bits>"
+  [(set (match_operand:P 0 "gpc_reg_operand" "=b")
+	(unspec:P [(const_int 0)]
+		  UNSPEC_TLSLD))]
+  "HAVE_AS_TLS && TARGET_ELF"
+  "la %0,%&@got@tlsld@pcrel"
+  [(set_attr "prefixed" "yes")])
 
 (define_insn_and_split "*tls_ld<bits>"
   [(set (match_operand:P 0 "gpc_reg_operand" "=b")
@@ -9578,7 +9596,11 @@
 		   (match_operand:P 2 "rs6000_tls_symbol_ref" "")]
 		  UNSPEC_TLSDTPREL))]
   "HAVE_AS_TLS"
-  "addi %0,%1,%2@dtprel")
+  "addi %0,%1,%2@dtprel"
+  [(set (attr "prefixed")
+	(if_then_else (match_test "rs6000_tls_size == 16")
+		      (const_string "no")
+		      (const_string "yes")))])
 
 (define_insn "tls_dtprel_ha_<bits>"
   [(set (match_operand:P 0 "gpc_reg_operand" "=r")
@@ -9642,7 +9664,11 @@
 		   (match_operand:P 2 "rs6000_tls_symbol_ref" "")]
 		  UNSPEC_TLSTPREL))]
   "HAVE_AS_TLS"
-  "addi %0,%1,%2@tprel")
+  "addi %0,%1,%2@tprel"
+  [(set (attr "prefixed")
+	(if_then_else (match_test "rs6000_tls_size == 16")
+		      (const_string "no")
+		      (const_string "yes")))])
 
 (define_insn "tls_tprel_ha_<bits>"
   [(set (match_operand:P 0 "gpc_reg_operand" "=r")
@@ -9659,6 +9685,15 @@
 		  UNSPEC_TLSTPRELLO))]
   "HAVE_AS_TLS"
   "addi %0,%1,%2@tprel@l")
+
+(define_insn "*tls_got_tprel_pcrel_<bits>"
+  [(set (match_operand:P 0 "gpc_reg_operand" "=b")
+	(unspec:P [(const_int 0)
+		   (match_operand:P 1 "rs6000_tls_symbol_ref" "")]
+		  UNSPEC_TLSGOTTPREL))]
+  "HAVE_AS_TLS"
+  "<ptrload> %0,%1@got@tprel@pcrel"
+  [(set_attr "prefixed" "yes")])
 
 ;; "b" output constraint here and on tls_tls input to support linker tls
 ;; optimization.  The linker may edit the instructions emitted by a
@@ -9702,6 +9737,14 @@
 		   UNSPEC_TLSGOTTPREL)))]
   "HAVE_AS_TLS && TARGET_CMODEL != CMODEL_SMALL"
   "<ptrload> %0,%2@got@tprel@l(%1)")
+
+(define_insn "tls_tls_pcrel_<bits>"
+  [(set (match_operand:P 0 "gpc_reg_operand" "=r")
+	(unspec:P [(match_operand:P 1 "gpc_reg_operand" "b")
+		   (match_operand:P 2 "rs6000_tls_symbol_ref" "")]
+		  UNSPEC_TLSTLS_PCREL))]
+  "TARGET_ELF && HAVE_AS_TLS"
+  "add %0,%1,%2@tls@pcrel")
 
 (define_insn "tls_tls_<bits>"
   [(set (match_operand:P 0 "gpc_reg_operand" "=r")
